Consolidate JSI projects (#6783)
* Update project-structure.md

* Remove JSI projects from Desktop SLN

* Move JSI shared sources to Shared\JSI

* Add Shared\JSI sources

* Fix Desktop includes

* Move JSI/Desktop/ sources to Desktop/JSI/

* Remove JSI\{Shared,Desktop}

* Move JSI Desktop tests to UnitTests

* Ported up to JsiRuntimeUnitTests_ObjectTest

* Ported up to JsiRuntimeUnitTests_Chakra_HostObjectTest

* Port remaining JsiRuntimeUnitTests_*

* Use MakeJSQueueThread()

* Separate tests into generic and Chakra-specific.

* Default to V8.

* Remove JSI Desktop UT

* Remove references to JSI.Shared and JSI.Universal

* Make x64 the default platform

* clang format

* Remove JSI.Desktop.UT from CI

* Remove JSI.Universal

* Change files

* Fix Desktop Int. Tests includes

* Add ReactCommon.UnitTests.

* Added ReactCommon tests.

* Add ViewTest.

* Add remaining tests.

* clang format

* Revert changes to Desktop.UnitTests

* Remove test.cpp

* Update packages.config

* Remove CppWinRT usages

* Add missing copyright

* Update UniTests script

* Removed JSI.* projects from templates and packages SLNs

* Skip DebugStringConvertibleTest on non-Debug

* Removed change files

* Change files

* Remove stale references to JSI.* projects

* Remove stale references to JSI.* projects

* Remove x86 config for ReactCommon.UnitTests

* Re-enabled V8,ChakraCore switching

* Renamed ChakraCoreRuntimeUnitTests.cpp as JsiRuntimeGenerators

* Removed JsiRuntimeUnitTests.h

* clang format

* Updated project-structure

* Add missing test filter AND operators

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj
@@ -80,7 +80,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(ReactNativeWindowsDir);$(ReactNativeWindowsDir)Common;$(ReactNativeWindowsDir)stubs;$(MSBuildProjectDirectory);$(ReactNativeWindowsDir)Shared;$(ReactNativeWindowsDir)\Shared\tracing;$(ReactNativeWindowsDir)include\Shared;$(ReactNativeWindowsDir)JSI\Shared;$(IncludePath)</IncludePath>
+    <IncludePath>$(ReactNativeWindowsDir);$(ReactNativeWindowsDir)Common;$(ReactNativeWindowsDir)stubs;$(MSBuildProjectDirectory);$(ReactNativeWindowsDir)Shared;$(ReactNativeWindowsDir)\Shared\tracing;$(ReactNativeWindowsDir)include\Shared;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
@@ -218,6 +218,7 @@
     <ClCompile Include="..\Microsoft.ReactNative\RedBoxErrorInfo.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative\TurboModulesProvider.cpp" />
     <ClCompile Include="CxxReactWin32\JSBigString.cpp" />
+    <ClCompile Include="JSI\ChakraJsiRuntime_core.cpp" />
     <ClCompile Include="ShadowNode.cpp" />
     <ClCompile Include="ShadowNodeRegistry.cpp" />
     <ClCompile Include="ViewManager.cpp" />
@@ -310,9 +311,6 @@
     </ProjectReference>
     <ProjectReference Include="..\FollyWin32\FollyWin32.vcxproj">
       <Project>{74085F13-2DDE-45E5-A0CA-927AC9D0B953}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\JSI\Desktop\JSI.Desktop.vcxproj">
-      <Project>{17dd1b17-3094-40dd-9373-ac2497932eca}</Project>
     </ProjectReference>
     <ProjectReference Include="..\ReactCommon\ReactCommon.vcxproj">
       <Project>{A9D95A91-4DB7-4F72-BEB6-FE8A5C89BFBD}</Project>
