--- a/packages/@react-native-windows/find-repo-root/package.json
+++ b/packages/@react-native-windows/find-repo-root/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rnw-scripts/find-repo-root",
-  "version": "0.0.14",
+  "name": "@react-native-windows/find-repo-root",
+  "version": "0.0.0-canary.14",
   "license": "MIT",
   "scripts": {
     "build": "just-scripts build",
@@ -24,10 +24,14 @@
     "typescript": "^3.8.3"
   },
   "beachball": {
+    "defaultNpmTag": "canary",
     "disallowedChangeTypes": [
-      "major"
+      "major",
+      "minor",
+      "patch"
     ]
   },
+  "promoteRelease": true,
   "files": [
     "lib-commonjs"
   ]
