--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -14,8 +14,8 @@
     "integrate-rn": "./bin.js"
   },
   "dependencies": {
-    "@rnw-scripts/find-repo-root": "^0.0.14",
-    "@rnw-scripts/package-utils": "^0.0.11",
+    "@react-native-windows/find-repo-root": "^0.0.0-canary.14",
+    "@react-native-windows/package-utils": "^0.0.0-canary.11",
     "async": "^3.2.0",
     "lodash": "^4.17.15",
     "ora": "^3.4.0",
