--- a/packages/@rnw-scripts/promote-release/package.json
+++ b/packages/@rnw-scripts/promote-release/package.json
@@ -13,8 +13,8 @@
     "promote-release": "./bin.js"
   },
   "dependencies": {
-    "@rnw-scripts/find-repo-root": "^0.0.14",
-    "@rnw-scripts/package-utils": "^0.0.11",
+    "@react-native-windows/find-repo-root": "^0.0.0-canary.14",
+    "@react-native-windows/package-utils": "^0.0.0-canary.11",
     "chalk": "^4.1.0",
     "simple-git": "^1.131.0",
     "yargs": "^15.4.1"
