--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -22,7 +22,7 @@
     "react-native-platform-override": "./bin.js"
   },
   "dependencies": {
-    "@rnw-scripts/package-utils": "^0.0.11",
+    "@react-native-windows/package-utils": "^0.0.0-canary.11",
     "async": "^3.2.0",
     "chalk": "^4.1.0",
     "fp-ts": "^2.5.0",
@@ -45,7 +45,7 @@
     "@rnw-scripts/eslint-config": "0.1.6",
     "@rnw-scripts/jest-unittest-config": "0.1.1",
     "@rnw-scripts/just-task": "0.0.6",
-    "@rnw-scripts/package-utils": "0.0.11",
+    "@react-native-windows/package-utils": "0.0.11",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/async": "^3.2.3",
     "@types/chalk": "^2.2.0",
